# anki-interactive-studio

./: README.md  pyproject.toml
src/ankii/: __init__.py  anki_connect.py  app.py  cli.py  clustering.py  embeddings.py  evaluator.py  llm.py
